--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <form id="transaction-form-cef" class="space-y-4" onsubmit="return false;">
                         <div>
                             <label for="description-cef" class="block text-sm font-medium text-gray-300">Descrição</label>
-                            <input type="text" id="description-cef" placeholder="Ex: Supernova Supermercado" class="mt-1 block w-full px-3 py-2 rounded-md" required>
+                            <input type="text" id="description-cef" placeholder="Ex: Padaria, Almoço, Mercado..." class="mt-1 block w-full px-3 py-2 rounded-md" required>
                         </div>
                         <div>
                             <label for="payment-method-cef" class="block text-sm font-medium text-gray-300">Forma de Pagamento</label>
@@ -203,7 +203,7 @@
                     <form id="transaction-form-nubank" class="space-y-4" onsubmit="return false;">
                         <div>
                             <label for="description-nubank" class="block text-sm font-medium text-gray-300">Descrição</label>
-                            <input type="text" id="description-nubank" placeholder="Ex: Lanchonete da Galáxia" class="mt-1 block w-full px-3 py-2 rounded-md" required>
+                            <input type="text" id="description-nubank" placeholder="Ex: Ifood, Uber..." class="mt-1 block w-full px-3 py-2 rounded-md" required>
                         </div>
                         <div>
                             <label for="payment-method-nubank" class="block text-sm font-medium text-gray-300">Forma de Pagamento</label>
@@ -737,4 +737,5 @@
     </script>
 </body>
 </html>
+
 
