--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
                             <select id="payment-method-cef" class="mt-1 block w-full px-3 py-2 rounded-md">
                                 <option>Débito</option>
                                 <option>Pix</option>
+                                <option>Cred Juros</option>
+                                <option>Cred Cm</option>
                             </select>
                         </div>
                         <div>
@@ -737,5 +739,6 @@
     </script>
 </body>
 </html>
+
 
 
