--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <!-- Seção CEF -->
             <div id="panel-cef" class="tab-panel" data-bank="cef">
                  <div class="p-6 rounded-xl mb-8 text-center glassmorphism">
-                    <h3 class="text-sm font-medium text-gray-400 uppercase">Saldo CEF</h3>
+                    <h3 class="text-sm font-medium text-gray-400 uppercase">Saldo em conta</h3>
                     <p id="balance-cef" class="text-4xl font-bold text-white mt-2">R$ 0,00</p>
                 </div>
                 <div class="p-6 rounded-xl mb-8 glassmorphism">
@@ -783,3 +783,4 @@
     </script>
 </body>
 </html>
+
